Genel dosyalar oluşturuluyor.

--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -1,4 +1,17 @@
 /* ==========================================================================
+    TEMİZLEME
+    Varsayılan değiştirgeleri temizleme eylemi.
+========================================================================== */
+*{
+  margin: 0;  padding: 0;
+}
+/* ==========================================================================
+    KAPLAMA
+    Display:Flexbox yöntemiyle geliştirilen örgü.
+========================================================================== */
+
+
+/* ==========================================================================
     GRIDLEX
     Just a Flexbox Grid System - v. 2.4.0
 ========================================================================== */
@@ -7,8 +20,7 @@
 [class*="grid_"] {
   box-sizing: border-box;
   display: flex;
-  flex-flow: row wrap;
-  margin: 0 -0.5rem; }
+  flex-flow: row wrap; }
 
 [class~="col"],
 [class*="col-"],
