index.html ekledik.

--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -135,6 +135,21 @@
   max-width: 4.16666666667%;}
 
 /* ======================= */
+
+/* ==========================================================================
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+    BURADAN SONRASINI GELECEKTE SİLECEĞİZ
+========================================================================== */
 /* ==========================================================================
     GRIDLEX
     Just a Flexbox Grid System - v. 2.4.0
