--- a/assets/css/deveb.css
+++ b/assets/css/deveb.css
@@ -2,8 +2,9 @@
     TEMİZLEME
     Varsayılan değiştirgeleri temizleme eylemi.
 ========================================================================== */
-*{
-  margin: 0;  padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
 /* ==========================================================================
     KAPLAMA
@@ -11,153 +12,183 @@
 ========================================================================== */
 [class~="kap"],
 [class*="kap-"],
-[class*="kap_"]{
-  display: flex;
-  flex-flow: row wrap;
-  box-sizing: border-box; }
+[class*="kap_"] {
+	display: flex;
+	flex-flow: row wrap;
+	box-sizing: border-box;
+}
 
 /* === KAPLAMA YARDIMCI === */
 
 [class*="kap-"][class*="-merkez"] {
-  justify-content: center; }
+	justify-content: center;
+}
 
 [class*="kap-"][class*="-sağ"] {
-  justify-content: flex-end;
-  align-self: flex-end;
-  margin-left: auto; }
+	justify-content: flex-end;
+	align-self: flex-end;
+	margin-left: auto;
+}
 
 [class*="kap-"][class*="-üst"] {
-  align-items: flex-start; }
+	align-items: flex-start;
+}
 
 [class*="kap-"][class*="-orta"] {
-  align-items: center; }
+	align-items: center;
+}
 
 [class*="kap-"][class*="-alt"] {
-  align-items: flex-end; }
+	align-items: flex-end;
+}
 
 /* ======================= */
 
 /* === KAPLAMA ÖLÇEKLERİ === */
 
-[class*="kap-1"] > [class~="kap"],
-[class*="kap"] > [class*="kap-1"]{
-  flex-basis: 100%;
-  max-width: 100%;}
+[class*="kap-1"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-1"] {
+	flex-basis: 100%;
+	max-width: 100%;
+}
 
-[class*="kap-2"] > [class~="kap"],
-[class*="kap"] > [class*="kap-2"]{
-  flex-basis: 50%;
-  max-width: 50%;}
+[class*="kap-2"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-2"] {
+	flex-basis: 50%;
+	max-width: 50%;
+}
 
-[class*="kap-3"] > [class~="kap"],
-[class*="kap"] > [class*="kap-3"]{
-  flex-basis: 33.3333333333%;
-  max-width: 33.3333333333%;}
+[class*="kap-3"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-3"] {
+	flex-basis: 33.3333333333%;
+	max-width: 33.3333333333%;
+}
 
-[class*="kap-4"] > [class~="kap"],
-[class*="kap"] > [class*="kap-4"]{
-  flex-basis: 25%;
-  max-width: 25%;}
+[class*="kap-4"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-4"] {
+	flex-basis: 25%;
+	max-width: 25%;
+}
 
-[class*="kap-5"] > [class~="kap"],
-[class*="kap"] > [class*="kap-5"]{
-  flex-basis: 20%;
-  max-width: 20%;}
+[class*="kap-5"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-5"] {
+	flex-basis: 20%;
+	max-width: 20%;
+}
 
-[class*="kap-6"] > [class~="kap"],
-[class*="kap"] > [class*="kap-6"]{
-  flex-basis: 16.6666666667%;
-  max-width: 16.6666666667%;}
+[class*="kap-6"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-6"] {
+	flex-basis: 16.6666666667%;
+	max-width: 16.6666666667%;
+}
 
-[class*="kap-7"] > [class~="kap"],
-[class*="kap"] > [class*="kap-7"]{
-  flex-basis: 14.2857142857%;
-  max-width: 14.2857142857%;}
+[class*="kap-7"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-7"] {
+	flex-basis: 14.2857142857%;
+	max-width: 14.2857142857%;
+}
 
-[class*="kap-8"] > [class~="kap"],
-[class*="kap"] > [class*="kap-8"]{
-  flex-basis: 12.5%;
-  max-width: 12.5%;}
+[class*="kap-8"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-8"] {
+	flex-basis: 12.5%;
+	max-width: 12.5%;
+}
 
-[class*="kap-9"] > [class~="kap"],
-[class*="kap"] > [class*="kap-9"]{
-  flex-basis: 11.1111111111%;
-  max-width: 11.1111111111%;}
+[class*="kap-9"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-9"] {
+	flex-basis: 11.1111111111%;
+	max-width: 11.1111111111%;
+}
 
-[class*="kap-10"] > [class~="kap"],
-[class*="kap"] > [class*="kap-10"]{
-  flex-basis: 10%;
-  max-width: 10%;}
+[class*="kap-10"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-10"] {
+	flex-basis: 10%;
+	max-width: 10%;
+}
 
-[class*="kap-11"] > [class~="kap"],
-[class*="kap"] > [class*="kap-11"]{
-  flex-basis: 9.09090909091%;
-  max-width: 9.09090909091%;}
+[class*="kap-11"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-11"] {
+	flex-basis: 9.09090909091%;
+	max-width: 9.09090909091%;
+}
 
-[class*="kap-12"] > [class~="kap"],
-[class*="kap"] > [class*="kap-12"]{
-  flex-basis: 8.33333333333%;
-  max-width: 8.33333333333%;}
+[class*="kap-12"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-12"] {
+	flex-basis: 8.33333333333%;
+	max-width: 8.33333333333%;
+}
 
-[class*="kap-13"] > [class~="kap"],
-[class*="kap"] > [class*="kap-13"]{
-  flex-basis: 7.69230769231%;
-  max-width: 7.69230769231%;}
+[class*="kap-13"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-13"] {
+	flex-basis: 7.69230769231%;
+	max-width: 7.69230769231%;
+}
 
-[class*="kap-14"] > [class~="kap"],
-[class*="kap"] > [class*="kap-14"]{
-  flex-basis: 7.14285714286%;
-  max-width: 7.14285714286%;}
+[class*="kap-14"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-14"] {
+	flex-basis: 7.14285714286%;
+	max-width: 7.14285714286%;
+}
 
-[class*="kap-15"] > [class~="kap"],
-[class*="kap"] > [class*="kap-15"]{
-  flex-basis: 6.66666666667%;
-  max-width: 6.66666666667%;}
+[class*="kap-15"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-15"] {
+	flex-basis: 6.66666666667%;
+	max-width: 6.66666666667%;
+}
 
-[class*="kap-16"] > [class~="kap"],
-[class*="kap"] > [class*="kap-16"]{
-  flex-basis: 6.25%;
-  max-width: 6.25%;}
+[class*="kap-16"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-16"] {
+	flex-basis: 6.25%;
+	max-width: 6.25%;
+}
 
-[class*="kap-17"] > [class~="kap"],
-[class*="kap"] > [class*="kap-17"]{
-  flex-basis: 5.88235294118%;
-  max-width: 5.88235294118%;}
+[class*="kap-17"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-17"] {
+	flex-basis: 5.88235294118%;
+	max-width: 5.88235294118%;
+}
 
-[class*="kap-18"] > [class~="kap"],
-[class*="kap"] > [class*="kap-18"]{
-  flex-basis: 5.55555555556%;
-  max-width: 5.55555555556%;}
+[class*="kap-18"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-18"] {
+	flex-basis: 5.55555555556%;
+	max-width: 5.55555555556%;
+}
 
-[class*="kap-19"] > [class~="kap"],
-[class*="kap"] > [class*="kap-19"]{
-  flex-basis: 5.26315789474%;
-  max-width: 5.26315789474%;}
+[class*="kap-19"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-19"] {
+	flex-basis: 5.26315789474%;
+	max-width: 5.26315789474%;
+}
 
-[class*="kap-20"] > [class~="kap"],
-[class*="kap"] > [class*="kap-20"]{
-  flex-basis: 5%;
-  max-width: 5%;}
+[class*="kap-20"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-20"] {
+	flex-basis: 5%;
+	max-width: 5%;
+}
 
-[class*="kap-21"] > [class~="kap"],
-[class*="kap"] > [class*="kap-21"]{
-  flex-basis: 4.7619047619%;
-  max-width: 4.7619047619%;}
+[class*="kap-21"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-21"] {
+	flex-basis: 4.7619047619%;
+	max-width: 4.7619047619%;
+}
 
-[class*="kap-22"] > [class~="kap"],
-[class*="kap"] > [class*="kap-22"]{
-  flex-basis: 4.54545454545%;
-  max-width: 4.54545454545%;}
+[class*="kap-22"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-22"] {
+	flex-basis: 4.54545454545%;
+	max-width: 4.54545454545%;
+}
 
-[class*="kap-23"] > [class~="kap"],
-[class*="kap"] > [class*="kap-23"]{
-  flex-basis: 4.34782608696%;
-  max-width: 4.34782608696%;}
+[class*="kap-23"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-23"] {
+	flex-basis: 4.34782608696%;
+	max-width: 4.34782608696%;
+}
 
-[class*="kap-24"] > [class~="kap"],
-[class*="kap"] > [class*="kap-24"]{
-  flex-basis: 4.16666666667%;
-  max-width: 4.16666666667%;}
+[class*="kap-24"] > [class*="kap-0"],
+[class*="kap-"] > [class*="kap-24"] {
+	flex-basis: 4.16666666667%;
+	max-width: 4.16666666667%;
+}
 
 /* ======================= */
 
