--- a/assets/css/deveb.alfa.css
+++ b/assets/css/deveb.alfa.css
@@ -50,306 +50,307 @@ flex: 1 1 0%;
 
 /* === KAPLAMA ÖLÇEKLERİ === */
 
-[class*="kap-25b"] > [class*="kap-0p"]	{	flex-basis: 4%;							max-width: 4%;							}
+[class*="kap-25b"] > [class*="kap-0p"]
+	{ flex-basis: 4%;max-width: 4%; }
 
 [class*="kap-24b"] > [class*="kap-0p"],[class*="kap-1-24p"]
-	{	flex-basis: 4.16666666666667%;	max-width: 4.16666666666667%;	}
+	{	flex-basis: 4.16666666666667%;max-width: 4.16666666666667%;	}
 
 [class*="kap-23b"] > [class*="kap-0p"]
-	{	flex-basis: 4.34782608696%;	max-width: 4.34782608696%;	}
+	{	flex-basis: 4.34782608696%;max-width: 4.34782608696%;	}
 
 [class*="kap-22b"] > [class*="kap-0p"]
-	{	flex-basis: 4.54545454545%;	max-width: 4.54545454545%;	}
+	{	flex-basis: 4.54545454545%;max-width: 4.54545454545%; }
 
 [class*="kap-21b"] > [class*="kap-0p"]
-	{	flex-basis: 4.7619047619%;	max-width: 4.7619047619%;		}
+	{	flex-basis: 4.7619047619%;max-width: 4.7619047619%;		}
 
 [class*="kap-20b"] > [class*="kap-0p"],[class*="kap-1-20p"]
-	{	flex-basis: 5%;	max-width: 5%;	}
+	{	flex-basis: 5%;max-width: 5%;	}
 
 [class*="kap-19b"] > [class*="kap-0p"]
-	{	flex-basis: 5.26315789474%;	max-width: 5.26315789474%;	}
+	{	flex-basis: 5.26315789474%;max-width: 5.26315789474%;	}
 
 [class*="kap-18b"] > [class*="kap-0p"],[class*="kap-1-18p"]
-	{	flex-basis: 5.55555555555556%;	max-width: 5.55555555555556%;	}
+	{	flex-basis: 5.55555555555556%;max-width: 5.55555555555556%;	}
 
 [class*="kap-17b"] > [class*="kap-0p"]
-	{	flex-basis: 5.88235294118%;	max-width: 5.88235294118%;	}
+	{	flex-basis: 5.88235294118%;max-width: 5.88235294118%;	}
 
 [class*="kap-16b"] > [class*="kap-0p"],[class*="kap-1-16p"]
-	{	flex-basis: 6.25%;	max-width: 6.25%;	}
+	{	flex-basis: 6.25%;max-width: 6.25%;	}
 
 [class*="kap-15b"] > [class*="kap-0p"]
-	{	flex-basis: 6.66666666667%;	max-width: 6.66666666667%;	}
+	{	flex-basis: 6.66666666667%;max-width: 6.66666666667%;	}
 
 [class*="kap-14b"] > [class*="kap-0p"]
-	{	flex-basis: 7.14285714286%;	max-width: 7.14285714286%;	}
+	{	flex-basis: 7.14285714286%;max-width: 7.14285714286%;	}
 
 [class*="kap-13b"] > [class*="kap-0p"]
-	{	flex-basis: 7.69230769231%;	max-width: 7.69230769231%;	}
+	{	flex-basis: 7.69230769231%;max-width: 7.69230769231%;	}
 
 [class*="kap-12b"] > [class*="kap-0p"],[class*="kap-2-24p"],[class*="kap-1-12p"]
-	{	flex-basis: 8.33333333333333%;	max-width: 8.33333333333333%;	}
+	{	flex-basis: 8.33333333333333%;max-width: 8.33333333333333%;	}
 
 [class*="kap-11b"] > [class*="kap-0p"]
-	{	flex-basis: 9.09090909091%;	max-width: 9.09090909091%;	}
+	{	flex-basis: 9.09090909091%;max-width: 9.09090909091%;	}
 
 [class*="kap-10b"] > [class*="kap-0p"],[class*="kap-2-20p"],[class*="kap-1-10p"]
-	{	flex-basis: 10%;	max-width: 10%;	}
+	{	flex-basis: 10%;max-width: 10%;	}
 
 [class*="kap-9b"] > [class*="kap-0p"],[class*="kap-2-18p"],[class*="kap-1-9p"]
-	{	flex-basis: 11.1111111111111%;	max-width: 11.1111111111111%;	}
+	{	flex-basis: 11.1111111111111%;max-width: 11.1111111111111%;	}
 
 [class*="kap-8b"] > [class*="kap-0p"],[class*="kap-3-24p"],[class*="kap-2-16p"],[class*="kap-1-8p"]
-	{	flex-basis: 12.5%;							max-width: 12.5%;							}
+	{	flex-basis: 12.5%;max-width: 12.5%; }
 
 [class*="kap-7b"] > [class*="kap-0p"]
-	{	flex-basis: 14.2857142857%;	max-width: 14.2857142857%;	}
+	{	flex-basis: 14.2857142857%;max-width: 14.2857142857%;	}
 
 [class*="kap-3-20p"]
-	{	flex-basis: 15%;	max-width: 15%;	}
+	{	flex-basis: 15%;max-width: 15%;	}
 
 [class*="kap-6b"] > [class*="kap-0p"],[class*="kap-4-24p"],[class*="kap-3-18p"],[class*="kap-2-12p"],[class*="kap-1-6p"]
-	{	flex-basis: 16.6666666666667%;	max-width: 16.6666666666667%;	}
+	{	flex-basis: 16.6666666666667%;max-width: 16.6666666666667%;	}
 
 [class*="kap-3-16p"]
-	{	flex-basis: 18.75%;	max-width: 18.75%;	}
+	{	flex-basis: 18.75%;max-width: 18.75%;	}
 
 [class*="kap-5b"] > [class*="kap-0p"],[class*="kap-4-20p"],[class*="kap-2-10p"],[class*="kap-1-5p"]
-	{	flex-basis: 20%;	max-width: 20%;	}
+	{	flex-basis: 20%;max-width: 20%;	}
 
 [class*="kap-5-24p"]
-	{	flex-basis: 20.8333333333333%;	max-width: 20.8333333333333%;	}
+	{	flex-basis: 20.8333333333333%;max-width: 20.8333333333333%;	}
 
 [class*="kap-4-18p"],[class*="kap-2-9p"]
-	{	flex-basis: 22.2222222222222%;	max-width: 22.2222222222222%;	}
+	{	flex-basis: 22.2222222222222%;max-width: 22.2222222222222%;	}
 
 [class*="kap-4b"] > [class*="kap-0p"],[class*="kap-6-24p"],[class*="kap-5-20p"],[class*="kap-4-16p"],[class*="kap-3-12p"],[class*="kap-2-8p"]
-	{	flex-basis: 25%;								max-width: 25%;								}
+	{	flex-basis: 25%;max-width: 25%;								}
 
 [class*="kap-5-18p"]
-	{	flex-basis: 27.7777777777778%;	max-width: 27.7777777777778%;	}
+	{	flex-basis: 27.7777777777778%;max-width: 27.7777777777778%;	}
 
 [class*="kap-7-24p"]
-	{	flex-basis: 29.1666666666667%;	max-width: 29.1666666666667%;	}
+	{	flex-basis: 29.1666666666667%;max-width: 29.1666666666667%;	}
 
 [class*="kap-6-20p"],[class*="kap-3-10p"]
-	{	flex-basis: 30%;	max-width: 30%;	}
+	{	flex-basis: 30%;max-width: 30%;	}
 
 [class*="kap-5-16p"]
-	{	flex-basis: 31.25%;	max-width: 31.25%;	}
+	{	flex-basis: 31.25%;max-width: 31.25%;	}
 
 [class*="kap-3b"] > [class*="kap-0p"],[class*="kap-8-24p"],[class*="kap-6-18p"],[class*="kap-4-12p"],[class*="kap-3-9p"],[class*="kap-2-6p"]
-	{	flex-basis: 33.3333333333333%;	max-width: 33.3333333333333%;	}
+	{	flex-basis: 33.3333333333333%;max-width: 33.3333333333333%;	}
 
 [class*="kap-7-20p"]
-	{	flex-basis: 35%;	max-width: 35%;	}
+	{	flex-basis: 35%;max-width: 35%;	}
 
 [class*="kap-9-24p"],[class*="kap-6-16p"],[class*="kap-3-8p"]
-	{	flex-basis: 37.5%;							max-width: 37.5%;							}
+	{	flex-basis: 37.5%;max-width: 37.5%;	}
 
 [class*="kap-7-18p"]
-	{	flex-basis: 38.8888888888889%;	max-width: 38.8888888888889%;	}
+	{	flex-basis: 38.8888888888889%;max-width: 38.8888888888889%;	}
 
 [class*="kap-8-20p"],[class*="kap-4-10p"],[class*="kap-2-5p"]
-	{	flex-basis: 40%;	max-width: 40%;	}
+	{	flex-basis: 40%;max-width: 40%;	}
 
 [class*="kap-10-24p"],[class*="kap-5-12p"]
-	{	flex-basis: 41.6666666666667%;	max-width: 41.6666666666667%;	}
+	{	flex-basis: 41.6666666666667%;max-width: 41.6666666666667%;	}
 
 [class*="kap-7-16p"]
-	{	flex-basis: 43.75%;	max-width: 43.75%;	}
+	{	flex-basis: 43.75%;max-width: 43.75%;	}
 
 [class*="kap-8-18p"],[class*="kap-4-9p"]
-		{	flex-basis: 44.4444444444444%;	max-width: 44.4444444444444%;	}
+		{	flex-basis: 44.4444444444444%;max-width: 44.4444444444444%;	}
 
 [class*="kap-9-20p"]
-	{	flex-basis: 45%;	max-width: 45%;	}
+	{	flex-basis: 45%;max-width: 45%;	}
 
 [class*="kap-11-24p"]
-	{	flex-basis: 45.8333333333333%;	max-width: 45.8333333333333%;	}
+	{	flex-basis: 45.8333333333333%;max-width: 45.8333333333333%;	}
 
 [class*="kap-2b"] > [class*="kap-0p"],[class*="kap-12-24p"],[class*="kap-10-20p"],[class*="kap-9-18p"],[class*="kap-8-16p"],[class*="kap-6-12p"],[class*="kap-5-10p"],[class*="kap-4-8p"],[class*="kap-3-6p"]
-	{	flex-basis: 50%;								max-width: 50%;								}
+	{	flex-basis: 50%;max-width: 50%;	}
 
 [class*="kap-13-24p"]
-	{	flex-basis: 54.1666666666667%;	max-width: 54.1666666666667%;	}
+	{	flex-basis: 54.1666666666667%;max-width: 54.1666666666667%;	}
 
 [class*="kap-11-20p"]
-	{	flex-basis: 55%;	max-width: 55%;	}
+	{	flex-basis: 55%;max-width: 55%;	}
 
 [class*="kap-10-18p"],[class*="kap-5-9p"]
-	{	flex-basis: 55.5555555555556%;	max-width: 55.5555555555556%;	}
+	{	flex-basis: 55.5555555555556%;max-width: 55.5555555555556%;	}
 
 [class*="kap-9-16p"]
-	{	flex-basis: 56.25%;	max-width: 56.25%;	}
+	{	flex-basis: 56.25%;max-width: 56.25%;	}
 
 [class*="kap-14-24p"],[class*="kap-7-12p"]
-	{	flex-basis: 58.3333333333333%;	max-width: 58.3333333333333%;	}
+	{	flex-basis: 58.3333333333333%;max-width: 58.3333333333333%;	}
 
 [class*="kap-12-20p"],[class*="kap-6-10p"],[class*="kap-3-5p"]
-	{	flex-basis: 60%;	max-width: 60%;	}
+	{	flex-basis: 60%;max-width: 60%;	}
 
 [class*="kap-11-18p"]
-	{	flex-basis: 61.1111111111111%;	max-width: 61.1111111111111%;	}
+	{	flex-basis: 61.1111111111111%;max-width: 61.1111111111111%;	}
 
 [class*="kap-15-24p"],[class*="kap-10-16p"],[class*="kap-5-8p"]
-	{	flex-basis: 62.5%;							max-width: 62.5%;							}
+	{	flex-basis: 62.5%;max-width: 62.5%;	}
 
 [class*="kap-13-20p"]
-	{	flex-basis: 65%;	max-width: 65%;	}
+	{	flex-basis: 65%;max-width: 65%;	}
 
 [class*="kap-16-24p"],[class*="kap-12-18p"],[class*="kap-8-12p"],[class*="kap-6-9p"],[class*="kap-4-6p"]
-	{	flex-basis: 66.6666666666667%;	max-width: 66.6666666666667%;	}
+	{	flex-basis: 66.6666666666667%;max-width: 66.6666666666667%;	}
 
 [class*="kap-11-16p"]
-	{	flex-basis: 68.75%;	max-width: 68.75%;	}
+	{	flex-basis: 68.75%;max-width: 68.75%;	}
 
 [class*="kap-14-20p"],[class*="kap-7-10p"]
-	{	flex-basis: 70%;	max-width: 70%;	}
+	{	flex-basis: 70%;max-width: 70%;	}
 
 [class*="kap-17-24p"]
-	{	flex-basis: 70.8333333333333%;	max-width: 70.8333333333333%;	}
+	{	flex-basis: 70.8333333333333%;max-width: 70.8333333333333%;	}
 
 [class*="kap-13-18p"]
-	{	flex-basis: 72.2222222222222%;	max-width: 72.2222222222222%;	}
+	{	flex-basis: 72.2222222222222%;max-width: 72.2222222222222%;	}
 
 [class*="kap-18-24p"],[class*="kap-15-20p"],[class*="kap-12-16p"],[class*="kap-9-12p"],[class*="kap-6-8p"]
-	{	flex-basis: 75%;								max-width: 75%;								}
+	{	flex-basis: 75%;max-width: 75%;	}
 
 [class*="kap-14-18p"],[class*="kap-7-9p"]
-	{	flex-basis: 77.7777777777778%;	max-width: 77.7777777777778%;	}
+	{	flex-basis: 77.7777777777778%;max-width: 77.7777777777778%;	}
 
 [class*="kap-19-24p"]
-	{	flex-basis: 79.1666666666667%;	max-width: 79.1666666666667%;	}
+	{	flex-basis: 79.1666666666667%;max-width: 79.1666666666667%;	}
 
 [class*="kap-16-20p"],[class*="kap-8-10p"],[class*="kap-4-5p"]
-	{	flex-basis: 80%;	max-width: 80%;	}
+	{	flex-basis: 80%;max-width: 80%;	}
 
 [class*="kap-13-16p"]
-	{	flex-basis: 81.25%;	max-width: 81.25%;	}
+	{	flex-basis: 81.25%;max-width: 81.25%;	}
 
 [class*="kap-20-24p"],[class*="kap-15-18p"],[class*="kap-10-12p"],[class*="kap-5-6p"]
-	{	flex-basis: 83.3333333333333%;	max-width: 83.3333333333333%;	}
+	{	flex-basis: 83.3333333333333%;max-width: 83.3333333333333%;	}
 
 [class*="kap-17-20p"]
-	{	flex-basis: 85%;	max-width: 85%;	}
+	{	flex-basis: 85%;max-width: 85%;	}
 
 [class*="kap-21-24p"],[class*="kap-14-16p"],[class*="kap-7-8p"]
-	{	flex-basis: 87.5%;							max-width: 87.5%;							}
+	{	flex-basis: 87.5%;max-width: 87.5%;	}
 
 [class*="kap-16-18p"],[class*="kap-8-9p"]
-	{	flex-basis: 88.8888888888889%;	max-width: 88.8888888888889%;	}
+	{	flex-basis: 88.8888888888889%;max-width: 88.8888888888889%;	}
 
 [class*="kap-18-20p"],[class*="kap-9-10p"]
-	{	flex-basis: 90%;	max-width: 90%;	}
+	{	flex-basis: 90%;max-width: 90%;	}
 
 [class*="kap-22-24p"],[class*="kap-11-12p"]
-	{	flex-basis: 91.6666666666667%;	max-width: 91.6666666666667%;	}
+	{	flex-basis: 91.6666666666667%;max-width: 91.6666666666667%;	}
 
 [class*="kap-15-16p"]
-	{	flex-basis: 93.75%;	max-width: 93.75%;	}
+	{	flex-basis: 93.75%;max-width: 93.75%;	}
 
 [class*="kap-17-18p"]
-	{	flex-basis: 94.4444444444444%;	max-width: 94.4444444444444%;	}
+	{	flex-basis: 94.4444444444444%;max-width: 94.4444444444444%;	}
 
 [class*="kap-19-20p"]
-	{	flex-basis: 95%;	max-width: 95%;	}
+	{	flex-basis: 95%;max-width: 95%;	}
 
 [class*="kap-23-24p"]
-	{	flex-basis: 95.8333333333333%;	max-width: 95.8333333333333%;	}
+	{	flex-basis: 95.8333333333333%;max-width: 95.8333333333333%;	}
 
 [class*="kap-1b"] > [class*="kap-0p"],[class*="kap-24-24p"],[class*="kap-20-20p"],[class*="kap-18-18p"],
 [class*="kap-16-16p"],[class*="kap-12-12p"],[class*="kap-10-10p"],[class*="kap-9-9p"],[class*="kap-8-8p"],
 [class*="kap-6-6p"],[class*="kap-5-5p"]
-	{	flex-basis: 100%;								max-width: 100%;							}
+	{	flex-basis: 100%;max-width: 100%;	}
 
 @media screen and (max-width: 80em) {
 
 
 [class*="b_lg-25b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 4%;							max-width: 4%;							}
+	{	flex-basis: 4%;max-width: 4%;	}
 
 [class*="b_lg-24b"] > [class*="kap-"][class*="-0p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-1-24p"]
-	{	flex-basis: 4.16666666666667%;	max-width: 4.16666666666667%;	}
+	{	flex-basis: 4.16666666666667%;max-width: 4.16666666666667%;	}
 
 [class*="b_lg-23b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 4.34782608696%;	max-width: 4.34782608696%;	}
+	{	flex-basis: 4.34782608696%;max-width: 4.34782608696%;	}
 
 [class*="b_lg-22b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 4.54545454545%;	max-width: 4.54545454545%;	}
+	{	flex-basis: 4.54545454545%;max-width: 4.54545454545%;	}
 
 [class*="b_lg-21b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 4.7619047619%;	max-width: 4.7619047619%;		}
+	{	flex-basis: 4.7619047619%;max-width: 4.7619047619%;		}
 
 [class*="b_lg-20b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-1-20p"]
-	{	flex-basis: 5%;	max-width: 5%;	}
+	{	flex-basis: 5%;max-width: 5%;	}
 
 [class*="b_lg-19b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 5.26315789474%;	max-width: 5.26315789474%;	}
+	{	flex-basis: 5.26315789474%;max-width: 5.26315789474%;	}
 
 [class*="b_lg-18b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-1-18p"]
-	{	flex-basis: 5.55555555555556%;	max-width: 5.55555555555556%;	}
+	{	flex-basis: 5.55555555555556%;max-width: 5.55555555555556%;	}
 
 [class*="b_lg-17b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 5.88235294118%;	max-width: 5.88235294118%;	}
+	{	flex-basis: 5.88235294118%;max-width: 5.88235294118%;	}
 
 [class*="b_lg-16b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-1-16p"]
-	{	flex-basis: 6.25%;	max-width: 6.25%;	}
+	{	flex-basis: 6.25%;max-width: 6.25%;	}
 
 [class*="b_lg-15b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 6.66666666667%;	max-width: 6.66666666667%;	}
+	{	flex-basis: 6.66666666667%;max-width: 6.66666666667%;	}
 
 [class*="b_lg-14b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 7.14285714286%;	max-width: 7.14285714286%;	}
+	{	flex-basis: 7.14285714286%;max-width: 7.14285714286%;	}
 
 [class*="b_lg-13b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 7.69230769231%;	max-width: 7.69230769231%;	}
+	{	flex-basis: 7.69230769231%;max-width: 7.69230769231%;	}
 
 [class*="b_lg-12b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-2-24p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-1-12p"]
-	{	flex-basis: 8.33333333333333%;	max-width: 8.33333333333333%;	}
+	{	flex-basis: 8.33333333333333%;max-width: 8.33333333333333%;	}
 
 [class*="b_lg-11b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 9.09090909091%;	max-width: 9.09090909091%;	}
+	{	flex-basis: 9.09090909091%;max-width: 9.09090909091%;	}
 
 [class*="b_lg-10b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-2-20p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-1-10p"]
-	{	flex-basis: 10%;	max-width: 10%;	}
+	{	flex-basis: 10%;max-width: 10%;	}
 
 [class*="b_lg-9b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-2-18p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-1-9p"]
-	{	flex-basis: 11.1111111111111%;	max-width: 11.1111111111111%;	}
+	{	flex-basis: 11.1111111111111%;max-width: 11.1111111111111%;	}
 
 [class*="b_lg-8b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-3-24p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-2-16p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-1-8p"]
-	{	flex-basis: 12.5%;							max-width: 12.5%;							}
+	{	flex-basis: 12.5%;max-width: 12.5%;	}
 
 [class*="b_lg-7b"] > [class*="kap-"][class*="-0p"]
-	{	flex-basis: 14.2857142857%;	max-width: 14.2857142857%;	}
+	{	flex-basis: 14.2857142857%;max-width: 14.2857142857%;	}
 
 [class*="kap-"] > [class*="kap-"][class*="p_lg-3-20p"]
-	{	flex-basis: 15%;	max-width: 15%;	}
+	{	flex-basis: 15%;max-width: 15%;	}
 
 [class*="b_lg-6b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-4-24p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-3-18p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-2-12p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-1-6p"]
-	{	flex-basis: 16.6666666666667%;	max-width: 16.6666666666667%;	}
+	{	flex-basis: 16.6666666666667%;max-width: 16.6666666666667%;	}
 
 [class*="kap-"] > [class*="kap-"][class*="p_lg-3-16p"]
-	{	flex-basis: 18.75%;	max-width: 18.75%;	}
+	{	flex-basis: 18.75%;max-width: 18.75%;	}
 
 [class*="b_lg-5b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-4-20p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-2-10p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-1-5p"]
-	{	flex-basis: 20%;	max-width: 20%;	}
+	{	flex-basis: 20%;max-width: 20%;	}
 
 [class*="kap-"] > [class*="kap-"][class*="p_lg-5-24p"]
-	{	flex-basis: 20.8333333333333%;	max-width: 20.8333333333333%;	}
+	{	flex-basis: 20.8333333333333%;max-width: 20.8333333333333%;	}
 
 [class*="kap-"] > [class*="kap-"][class*="p_lg-4-18p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-2-9p"]
-	{	flex-basis: 22.2222222222222%;	max-width: 22.2222222222222%;	}
+	{	flex-basis: 22.2222222222222%;max-width: 22.2222222222222%;	}
 
 [class*="b_lg-4b"] > [class*="kap-"][class*="-0p"],
 [class*="kap-"] > [class*="kap-"][class*="p_lg-6-24p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-5-20p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-4-16p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-3-12p"],[class*="kap-"] > [class*="kap-"][class*="p_lg-2-8p"]
